--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "setup": "run-s setup:db setup:app",
     "setup:app": "run-p \"test -- --run\" lint typecheck test:e2e:run",
     "setup:db": "prisma migrate dev",
+    "deploy:db": "prisma migrate deploy",
     "start": "remix-serve build",
     "start:mocks": "node --require ./mocks ./node_modules/.bin/remix-serve build",
     "test": "vitest",
