--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
-    "next": "12.2.0",
+    "next": "^12.2.0",
     "next-auth": "^4.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
