--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "node-fetch": "^3.2.6",
     "postcss": "^8.4.14",
     "prisma": "^4.0.0",
     "tailwindcss": "^3.1.4",
