--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "^9.25.3",
     "next": "^12.2.0",
     "next-auth": "^4.7.0",
+    "next-plausible": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
