--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-plausible": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
