--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
