--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "eslint-config-next": "12.1.6",
     "node-fetch": "^3.2.6",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
     "prisma": "^4.0.0",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
