--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-auth": "^4.9.0",
     "next-plausible": "^3.2.0",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
