--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-query": "^3.39.1",
+    "request-ip": "^3.3.0",
     "superjson": "^1.9.1",
     "usehooks-ts": "^2.6.0",
     "victory": "^36.5.3",
@@ -41,6 +42,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/request-ip": "^0.0.37",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
@@ -48,7 +50,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
-    "prisma": "^4.0.0",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
