feat: introduce `dayjs` to easily manipulate date formats
Note: this should be removed in the future

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "dayjs": "^1.11.5",
     "next": "^12.2.0",
     "next-auth": "^4.9.0",
     "next-plausible": "^3.2.0",
