--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@next/font": "^13.1.5",
     "@prisma/client": "^4.3.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
@@ -22,12 +23,12 @@
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "dayjs": "^1.11.5",
-    "next": "^12.2.0",
+    "next": "^13.1.5",
     "next-auth": "^4.10.3",
     "next-plausible": "^3.2.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
@@ -46,7 +47,7 @@
     "@types/request-ip": "^0.0.37",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.1.5",
     "node-fetch": "^3.2.10",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
