--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.267.0",
     "@fontsource/inter": "^4.5.11",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
