Implement jobs offers page (#56)

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "next": "^13.1.5",
     "next-auth": "^4.10.3",
@@ -31,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.3",
     "react-query": "^3.39.1",
     "request-ip": "^3.3.0",
