--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@prisma/client": "^4.3.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
-    "@trpc/client": "^9.25.3",
-    "@trpc/next": "^9.25.3",
-    "@trpc/react": "^9.25.3",
-    "@trpc/server": "^9.25.3",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "next": "^13.1.5",
