--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ],
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -28,5 +36,4 @@
   "exclude": [
     "node_modules"
   ],
-  "extends": "./tsconfig.paths.json"
 }
