--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "@fontsource/inter": "^4.5.11",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
-    "@next-auth/prisma-adapter": "^1.0.3",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.5",
     "@prisma/client": "^4.3.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
-    "@trpc/client": "^9.25.3",
-    "@trpc/next": "^9.25.3",
-    "@trpc/react": "^9.25.3",
-    "@trpc/server": "^9.25.3",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "next": "^13.1.5",
-    "next-auth": "^4.10.3",
+    "next-auth": "^4.19.0",
     "next-plausible": "^3.7.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
