--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.5",
+    "@planetscale/database": "^1.6.0",
     "@prisma/client": "^4.11.0",
     "@tailwindcss/forms": "^0.5.3",
     "@trpc/client": "^10.12.0",
     "@trpc/next": "^10.12.0",
     "@trpc/react-query": "^10.12.0",
     "@trpc/server": "^10.12.0",
+    "@vercel/og": "^0.4.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
+    "kysely": "^0.23.5",
+    "kysely-planetscale": "^1.3.0",
     "next": "^13.2.4",
     "next-auth": "^4.19.0",
     "next-plausible": "^3.7.2",
