--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
   db:
     image: mysql:latest
-    container_name: mysql
+    container_name: mysql-pisadev
     ports:
       - 3306:3306
     # User/password for local dev: root/password
