feat: migrate from Planetscale to Turso

--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,8 @@
 # Note that not all variables here might be in use for your selected configuration
 
 # Prisma
-DATABASE_URL=
+TURSO_DATABASE_URL=
+TURSO_AUTH_TOKEN=
 NEXTAUTH_URL="http://localhost:3000/"
 
 # Next Auth
