--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@fontsource/inter": "^4.5.11",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
+    "@libsql/client": "^0.6.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.5",
-    "@planetscale/database": "^1.6.0",
-    "@prisma/client": "^4.11.0",
+    "@prisma/adapter-libsql": "^5.12.1",
+    "@prisma/client": "^5.12.1",
     "@tailwindcss/forms": "^0.5.3",
     "@trpc/client": "^10.12.0",
     "@trpc/next": "^10.12.0",
@@ -25,8 +26,6 @@
     "@vercel/og": "^0.4.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
-    "kysely": "^0.23.5",
-    "kysely-planetscale": "^1.3.0",
     "next": "^13.2.4",
     "next-auth": "^4.19.0",
     "next-plausible": "^3.7.2",
@@ -57,7 +56,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.2.4",
-    "prisma": "^4.11.0",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.2.7",
     "typescript": "4.7.4"
   }
