chore: migrate to Postgres

--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,7 @@
 # Note that not all variables here might be in use for your selected configuration
 
 # Prisma
-TURSO_DATABASE_URL=
-TURSO_AUTH_TOKEN=
+DATABASE_URL="postgresql://root:password@localhost/pisadev"
 NEXTAUTH_URL="http://localhost:3000/"
 
 # Next Auth
