--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
-TURSO_DATABASE_URL="file:dev_db.sqlite3"
-TURSO_AUTH_TOKEN=""
+# LOCAL URL
+DATABASE_URL="postgresql://root:password@localhost/pisadev"
+
 NEXTAUTH_URL="http://localhost:3000/"
