--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env
+.env.*
 .env*.local
 
 # vercel
@@ -34,6 +35,3 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-
-# development
-dev_db.sqlite3
