--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "@fontsource/inter": "^4.5.11",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
-    "@libsql/client": "^0.6.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.5",
-    "@prisma/adapter-libsql": "^5.12.1",
+    "@prisma/adapter-pg": "^5.12.1",
     "@prisma/client": "^5.12.1",
     "@tailwindcss/forms": "^0.5.3",
     "@trpc/client": "^10.12.0",
@@ -29,6 +28,7 @@
     "next": "^13.2.4",
     "next-auth": "^4.19.0",
     "next-plausible": "^3.7.2",
+    "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.0.0",
+    "@types/pg": "^8.11.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/request-ip": "^0.0.37",
